ajout du text de description

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Hello World!</h1>
-</body>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam saepe nihil, id doloribus aliquam, cupiditate harum doloremque obcaecati, totam a ipsam ratione perferendis odio quasi consequatur. Laborum illo expedita dolor.</p>
+   </body>
 </html>
 
 
